// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unit:lib/Command > #addArgument > should throw if argument is added after variadic argument 1`] = `
{
  "code": 1,
  "id": "kronk/argument-after-variadic",
  "message": "Cannot have argument after variadic argument ([num...])",
  "additional": [],
  "cause": {
    "argument": "<...>",
    "last": "[num...]",
  },
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` alias conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'tz' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addCommand > should throw on \`command\` name conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-subcommand",
  "message": "Subcommand with name or alias 'timezone' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addCommand > should throw on invalid \`command\` name 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-subcommand-name",
  "message": "Invalid subcommand name",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addOption > should throw on long flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '--max' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #addOption > should throw on short flag conflict 1`] = `
{
  "code": 1,
  "id": "kronk/duplicate-option",
  "message": "Option with flag '-M' already exists",
  "additional": [],
}
`;

exports[`unit:lib/Command > #examples > should add examples and return \`this\` 1`] = `
[
  {
    "prefix": undefined,
    "text": "bump -w 1.0.0",
  },
  {
    "prefix": "ch",
    "text": "--releases=0 --to=$(jq .version package.json -r) -sw",
  },
]
`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (0) 1`] = `
Command {
  "info": {
    "description": "show help",
    "name": "help",
    "helpCommand": null,
    "hidden": false,
    "aliases": Set {},
    "arguments": [],
    "examples": [],
    "options": Map {
      "--help" => Option {
        "info": {
          "description": "show help",
          "flags": "-h | --help",
          "hidden": false,
          "choices": undefined,
          "default": undefined,
          "parser": undefined,
          "short": "-h",
          "long": "--help",
          "conflicts": undefined,
          "env": undefined,
          "implies": {},
          "preset": undefined,
        },
      },
      "-h" => Option {
        "info": {
          "description": "show help",
          "flags": "-h | --help",
          "hidden": false,
          "choices": undefined,
          "default": undefined,
          "parser": undefined,
          "short": "-h",
          "long": "--help",
          "conflicts": undefined,
          "env": undefined,
          "implies": {},
          "preset": undefined,
        },
      },
    },
    "subcommands": Map {},
    "version": undefined,
    "action": [Function bound help],
    "done": undefined,
    "exit": undefined,
    "helpOption": Option {
      "info": {
        "description": "show help",
        "flags": "-h | --help",
        "hidden": false,
        "choices": undefined,
        "default": undefined,
        "parser": undefined,
        "short": "-h",
        "long": "--help",
        "conflicts": undefined,
        "env": undefined,
        "implies": {},
        "preset": undefined,
      },
    },
    "helpUtility": Help {
      "columns": 80,
      "style": {
        "color": true,
        "styles": {
          "bgBlack": [
            40,
            49,
          ],
          "bgBlackBright": [
            100,
            49,
          ],
          "bgBlue": [
            44,
            49,
          ],
          "bgBlueBright": [
            104,
            49,
          ],
          "bgCyan": [
            46,
            49,
          ],
          "bgCyanBright": [
            106,
            49,
          ],
          "bgGray": [
            100,
            49,
          ],
          "bgGreen": [
            42,
            49,
          ],
          "bgGreenBright": [
            102,
            49,
          ],
          "bgGrey": [
            100,
            49,
          ],
          "bgMagenta": [
            45,
            49,
          ],
          "bgMagentaBright": [
            105,
            49,
          ],
          "bgRed": [
            41,
            49,
          ],
          "bgRedBright": [
            101,
            49,
          ],
          "bgWhite": [
            47,
            49,
          ],
          "bgWhiteBright": [
            107,
            49,
          ],
          "bgYellow": [
            43,
            49,
          ],
          "bgYellowBright": [
            103,
            49,
          ],
          "black": [
            30,
            39,
          ],
          "blackBright": [
            90,
            39,
          ],
          "blue": [
            34,
            39,
          ],
          "blueBright": [
            94,
            39,
          ],
          "bold": [
            1,
            22,
            "[22m[1m",
          ],
          "cyan": [
            36,
            39,
          ],
          "cyanBright": [
            96,
            39,
          ],
          "dim": [
            2,
            22,
            "[22m[2m",
          ],
          "gray": [
            90,
            39,
          ],
          "green": [
            32,
            39,
          ],
          "greenBright": [
            92,
            39,
          ],
          "grey": [
            90,
            39,
          ],
          "hidden": [
            8,
            28,
          ],
          "inverse": [
            7,
            27,
          ],
          "italic": [
            3,
            23,
          ],
          "magenta": [
            35,
            39,
          ],
          "magentaBright": [
            95,
            39,
          ],
          "overline": [
            53,
            55,
          ],
          "red": [
            31,
            39,
          ],
          "redBright": [
            91,
            39,
          ],
          "reset": [
            0,
            0,
          ],
          "strikethrough": [
            9,
            29,
          ],
          "underline": [
            4,
            24,
          ],
          "white": [
            37,
            39,
          ],
          "whiteBright": [
            97,
            39,
          ],
          "yellow": [
            33,
            39,
          ],
          "yellowBright": [
            93,
            39,
          ],
        },
        "supported": true,
        "bgBlack": [Function bgBlack],
        "bgBlackBright": [Function bgBlackBright],
        "bgBlue": [Function bgBlue],
        "bgBlueBright": [Function bgBlueBright],
        "bgCyan": [Function bgCyan],
        "bgCyanBright": [Function bgCyanBright],
        "bgGray": [Function bgGray],
        "bgGreen": [Function bgGreen],
        "bgGreenBright": [Function bgGreenBright],
        "bgGrey": [Function bgGrey],
        "bgMagenta": [Function bgMagenta],
        "bgMagentaBright": [Function bgMagentaBright],
        "bgRed": [Function bgRed],
        "bgRedBright": [Function bgRedBright],
        "bgWhite": [Function bgWhite],
        "bgWhiteBright": [Function bgWhiteBright],
        "bgYellow": [Function bgYellow],
        "bgYellowBright": [Function bgYellowBright],
        "black": [Function black],
        "blackBright": [Function blackBright],
        "blue": [Function blue],
        "blueBright": [Function blueBright],
        "bold": [Function bold],
        "cyan": [Function cyan],
        "cyanBright": [Function cyanBright],
        "dim": [Function dim],
        "gray": [Function gray],
        "green": [Function green],
        "greenBright": [Function greenBright],
        "grey": [Function grey],
        "hidden": [Function hidden],
        "inverse": [Function inverse],
        "italic": [Function italic],
        "magenta": [Function magenta],
        "magentaBright": [Function magentaBright],
        "overline": [Function overline],
        "red": [Function red],
        "redBright": [Function redBright],
        "reset": [Function reset],
        "strikethrough": [Function strikethrough],
        "underline": [Function underline],
        "white": [Function white],
        "whiteBright": [Function whiteBright],
        "yellow": [Function yellow],
        "yellowBright": [Function yellowBright],
      },
    },
    "optionPriority": "local",
    "summary": undefined,
    "unknown": false,
    "usage": undefined,
  },
  "actionEvent": null,
  "args": [],
  "argv": [],
  "defaultCommand": null,
  "events": EventEmitter {
    "_events": {
      "option:help": [
        [Function bound onOption],
        [Function bound onOptionWithAction],
        [Function bound onOptionHelp],
      ],
    },
    "_newListener": false,
    "_removeListener": false,
    "verboseMemoryLeak": false,
    "_conf": {
      "delimiter": ":",
    },
    "delimiter": ":",
  },
  "optionValueSources": {},
  "optionValues": {},
  "parent": Command {
    "info": {
      "name": undefined,
      "description": undefined,
      "hidden": false,
      "aliases": Set {},
      "arguments": [],
      "examples": [],
      "options": Map {
        "--help" => Option {
          "info": {
            "description": "show help",
            "flags": "-h | --help",
            "hidden": false,
            "choices": undefined,
            "default": undefined,
            "parser": undefined,
            "short": "-h",
            "long": "--help",
            "conflicts": undefined,
            "env": undefined,
            "implies": {},
            "preset": undefined,
          },
        },
        "-h" => Option {
          "info": {
            "description": "show help",
            "flags": "-h | --help",
            "hidden": false,
            "choices": undefined,
            "default": undefined,
            "parser": undefined,
            "short": "-h",
            "long": "--help",
            "conflicts": undefined,
            "env": undefined,
            "implies": {},
            "preset": undefined,
          },
        },
      },
      "subcommands": Map {
        "help" => [Circular],
      },
      "version": undefined,
      "action": undefined,
      "done": undefined,
      "exit": undefined,
      "helpCommand": [Circular],
      "helpOption": Option {
        "info": {
          "description": "show help",
          "flags": "-h | --help",
          "hidden": false,
          "choices": undefined,
          "default": undefined,
          "parser": undefined,
          "short": "-h",
          "long": "--help",
          "conflicts": undefined,
          "env": undefined,
          "implies": {},
          "preset": undefined,
        },
      },
      "helpUtility": Help {
        "columns": 80,
        "style": {
          "color": true,
          "styles": {
            "bgBlack": [
              40,
              49,
            ],
            "bgBlackBright": [
              100,
              49,
            ],
            "bgBlue": [
              44,
              49,
            ],
            "bgBlueBright": [
              104,
              49,
            ],
            "bgCyan": [
              46,
              49,
            ],
            "bgCyanBright": [
              106,
              49,
            ],
            "bgGray": [
              100,
              49,
            ],
            "bgGreen": [
              42,
              49,
            ],
            "bgGreenBright": [
              102,
              49,
            ],
            "bgGrey": [
              100,
              49,
            ],
            "bgMagenta": [
              45,
              49,
            ],
            "bgMagentaBright": [
              105,
              49,
            ],
            "bgRed": [
              41,
              49,
            ],
            "bgRedBright": [
              101,
              49,
            ],
            "bgWhite": [
              47,
              49,
            ],
            "bgWhiteBright": [
              107,
              49,
            ],
            "bgYellow": [
              43,
              49,
            ],
            "bgYellowBright": [
              103,
              49,
            ],
            "black": [
              30,
              39,
            ],
            "blackBright": [
              90,
              39,
            ],
            "blue": [
              34,
              39,
            ],
            "blueBright": [
              94,
              39,
            ],
            "bold": [
              1,
              22,
              "[22m[1m",
            ],
            "cyan": [
              36,
              39,
            ],
            "cyanBright": [
              96,
              39,
            ],
            "dim": [
              2,
              22,
              "[22m[2m",
            ],
            "gray": [
              90,
              39,
            ],
            "green": [
              32,
              39,
            ],
            "greenBright": [
              92,
              39,
            ],
            "grey": [
              90,
              39,
            ],
            "hidden": [
              8,
              28,
            ],
            "inverse": [
              7,
              27,
            ],
            "italic": [
              3,
              23,
            ],
            "magenta": [
              35,
              39,
            ],
            "magentaBright": [
              95,
              39,
            ],
            "overline": [
              53,
              55,
            ],
            "red": [
              31,
              39,
            ],
            "redBright": [
              91,
              39,
            ],
            "reset": [
              0,
              0,
            ],
            "strikethrough": [
              9,
              29,
            ],
            "underline": [
              4,
              24,
            ],
            "white": [
              37,
              39,
            ],
            "whiteBright": [
              97,
              39,
            ],
            "yellow": [
              33,
              39,
            ],
            "yellowBright": [
              93,
              39,
            ],
          },
          "supported": true,
          "bgBlack": [Function bgBlack],
          "bgBlackBright": [Function bgBlackBright],
          "bgBlue": [Function bgBlue],
          "bgBlueBright": [Function bgBlueBright],
          "bgCyan": [Function bgCyan],
          "bgCyanBright": [Function bgCyanBright],
          "bgGray": [Function bgGray],
          "bgGreen": [Function bgGreen],
          "bgGreenBright": [Function bgGreenBright],
          "bgGrey": [Function bgGrey],
          "bgMagenta": [Function bgMagenta],
          "bgMagentaBright": [Function bgMagentaBright],
          "bgRed": [Function bgRed],
          "bgRedBright": [Function bgRedBright],
          "bgWhite": [Function bgWhite],
          "bgWhiteBright": [Function bgWhiteBright],
          "bgYellow": [Function bgYellow],
          "bgYellowBright": [Function bgYellowBright],
          "black": [Function black],
          "blackBright": [Function blackBright],
          "blue": [Function blue],
          "blueBright": [Function blueBright],
          "bold": [Function bold],
          "cyan": [Function cyan],
          "cyanBright": [Function cyanBright],
          "dim": [Function dim],
          "gray": [Function gray],
          "green": [Function green],
          "greenBright": [Function greenBright],
          "grey": [Function grey],
          "hidden": [Function hidden],
          "inverse": [Function inverse],
          "italic": [Function italic],
          "magenta": [Function magenta],
          "magentaBright": [Function magentaBright],
          "overline": [Function overline],
          "red": [Function red],
          "redBright": [Function redBright],
          "reset": [Function reset],
          "strikethrough": [Function strikethrough],
          "underline": [Function underline],
          "white": [Function white],
          "whiteBright": [Function whiteBright],
          "yellow": [Function yellow],
          "yellowBright": [Function yellowBright],
        },
      },
      "optionPriority": "local",
      "summary": undefined,
      "unknown": false,
      "usage": undefined,
    },
    "actionEvent": null,
    "args": [],
    "argv": [],
    "defaultCommand": null,
    "events": EventEmitter {
      "_events": {
        "option:help": [
          [Function bound onOption],
          [Function bound onOptionWithAction],
          [Function bound onOptionHelp],
        ],
      },
      "_newListener": false,
      "_removeListener": false,
      "verboseMemoryLeak": false,
      "_conf": {
        "delimiter": ":",
      },
      "delimiter": ":",
    },
    "optionValueSources": {},
    "optionValues": {},
    "parent": null,
  },
}
`;

exports[`unit:lib/Command > #helpCommand > should return help subcommand (1) 1`] = `null`;

exports[`unit:lib/Command > #helpOption > should return help option (0) 1`] = `
Option {
  "info": {
    "description": "show help",
    "flags": "-h | --help",
    "hidden": false,
    "choices": undefined,
    "default": undefined,
    "parser": undefined,
    "short": "-h",
    "long": "--help",
    "conflicts": undefined,
    "env": undefined,
    "implies": {},
    "preset": undefined,
  },
}
`;

exports[`unit:lib/Command > #helpOption > should return help option (1) 1`] = `null`;

exports[`unit:lib/Command > #usage > should return command usage (0) 1`] = `
{
  "arguments": undefined,
  "options": "[options]",
  "subcommand": "[command]",
}
`;

exports[`unit:lib/Command > #usage > should return command usage (1) 1`] = `
{
  "arguments": "<x> <y> <z>",
  "options": "[options]",
  "subcommand": "[command]",
}
`;
